univention-updater (10.0.0-6) unstable; urgency=low

  * Set UCRVs version/* (Bug #35312, Bug #35635)
  * Remove obsolete upgrade handling code.

 -- Philipp Hahn <hahn@univention.de>  Tue, 19 Aug 2014 10:10:10 +0200

univention-updater (10.0.0-5) unstable; urgency=low

  * Bug #35508: merge svn52332 and svn52355

 -- Florian Best <best@univention.de>  Wed, 30 Jul 2014 15:58:26 +0200

univention-updater (10.0.0-4) unstable; urgency=low

  * Readd univention-directory-policy dependency (Bug #35431)

 -- Florian Best <best@univention.de>  Tue, 29 Jul 2014 13:44:43 +0200

univention-updater (10.0.0-3) unstable; urgency=low

  * Remove univention-directory-policy from the dependencies and add it
    to the list of recommended packages (Bug #35431)

 -- Stefan Gohmann <gohmann@univention.de>  Wed, 23 Jul 2014 12:28:00 +0200

univention-updater (10.0.0-2) unstable; urgency=medium

  * Update to UCS 4.0 (Bug #35267)

 -- Janek Walkenhorst <walkenhorst@univention.de>  Tue, 22 Jul 2014 10:37:33 +0200

univention-updater (9.0.41-4) unstable; urgency=medium

  * Transfer UCS component installation status in APT user agent (Bug #33807)

 -- Janek Walkenhorst <walkenhorst@univention.de>  Fri, 04 Jul 2014 15:22:37 +0200

univention-updater (9.0.41-2) unstable; urgency=low

  * Bug #35022: Do not register apps when only installing master packages

 -- Dirk Wiesenthal <wiesenthal@univention.de>  Wed, 25 Jun 2014 15:41:48 +0200

univention-updater (9.0.41-1) unstable; urgency=low

  * Unset uuid/license if univentionLicenseKeyID is missing in license (Bug #34809)

 -- Felix Botner <botner@univention.de>  Wed, 18 Jun 2014 10:14:40 +0200

univention-updater (9.0.40-1) unstable; urgency=low

  * Adjust pre- and postup.sh for UCS 3.2-2 (Bug #33809)

 -- Stefan Gohmann <gohmann@univention.de>  Wed, 14 May 2014 12:33:42 +0200

univention-updater (9.0.39-1) unstable; urgency=low

  * Adjust pre- and postup.sh for UCS 3.2-2 (Bug #33809)
