@@ -111,14 +111,14 @@ fi
 
 # Move to mirror mode for previous errata component
 ucr set \
-	repository/online/component/3.2-2-errata=false \
-	repository/online/component/3.2-2-errata/localmirror=true >>"$UPDATER_LOG" 2>&1
+	repository/online/component/3.2-3-errata=false \
+	repository/online/component/3.2-3-errata/localmirror=true >>"$UPDATER_LOG" 2>&1
 
-# Set errata component for UCS 3.2-3
+# Set errata component for UCS 4.0-0
 ucr set \
-	repository/online/component/3.2-3-errata=enabled \
-	repository/online/component/3.2-3-errata/description="Errata updates for UCS 3.2-3" \
-	repository/online/component/3.2-3-errata/version="3.2" >>"$UPDATER_LOG" 2>&1
+	repository/online/component/4.0-0-errata=enabled \
+	repository/online/component/4.0-0-errata/description="Errata updates for UCS 4.0-0" \
+	repository/online/component/4.0-0-errata/version="4.0" >>"$UPDATER_LOG" 2>&1
 
 # make sure that UMC server is restarted (Bug #33426)
 echo "
